--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "^0.0.60",
+    "@farcaster/frame-sdk": "^0.0.64",
+    "@farcaster/frame-wagmi-connector": "^0.0.53",
     "@farcaster/hub-nodejs": "^0.13.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.9",
+    "@nomicfoundation/hardhat-toolbox": "^6.0.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "@types/html2canvas": "^0.5.35",
     "@vercel/blob": "^1.1.1",
+    "dotenv": "^17.0.0",
+    "ethers": "^6.14.4",
     "html2canvas": "^1.4.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.31.4",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "hardhat": "^2.25.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
